--- a/billling/index.html
+++ b/billling/index.html
@@ -5,7 +5,7 @@
     ResultSet rs = null;
     try {
         Class.forName("com.mysql.jdbc.Driver");
-        con = DriverManager.getConnection("jdbc:mysql://localhost:3306/mydatabase", "username", "password");
+        con = DriverManager.getConnection("jdbc:mysql://localhost:3306/bil", "root", "");
         ps = con.prepareStatement("SELECT * FROM items");
         rs = ps.executeQuery();
     } catch (Exception e) {
